--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>TensorFlow.js toxicity classifier demo</title>
+    <title>Toxicity Checker</title>
     <style>
         .row {
             display: flex;
